# sre-triage-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  deploy_hf.py  eval_proxy.py  inference.py  inference_output2.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_live.py  test_local.py  test_logic.py
server/: __init__.py  app.py  environment.py
